--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -1,10 +1,4 @@
-import webbrowser
-import os
-import re
 
-
-# Styles and scripting for the page
-main_page_head = '''
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -83,11 +77,7 @@ main_page_head = '''
         });
     </script>
 </head>
-'''
 
-
-# The main page layout and title bar
-main_page_content = '''
   <body>
     <!-- Trailer Video Modal -->
     <div class="modal" id="trailer">
@@ -113,55 +103,67 @@ main_page_content = '''
       </div>
     </div>
     <div class="container">
-      {movie_tiles}
+      
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="uIxnTi4GmCo" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/xcqcq8qo3UVD2lTW.png" width="220" height="342">
+    <h2>ALPHA</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="eJU6S5KOsNI" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/qOlnIN88hLFAclPs.png" width="220" height="342">
+    <h2>MILE 22</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="HyNJ3UrGk_I" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/MdG91lNkW22NI6wf.png" width="220" height="342">
+    <h2>THE EQUALIZER 2</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bsLk0NPRFAc" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/t6heqJzTtW3amJQl.png" width="220" height="342">
+    <h2>THE MEG</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="3u3cSuLJxVY" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/obrNkDTfPNmADpbq.png" width="220" height="342">
+    <h2>THE BOMBING</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="gG22XNhtnoY" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/pn5yfqF0Od3c8aZZ.png" width="220" height="342">
+    <h2>SCHINDLER'S LIST</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="BFwGqLa_oAo" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/G8qUNaoZJjRekaV7.png" width="220" height="342">
+    <h2>THE PIANIST</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="s2-1hz1juBI" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/3LrFLi7YStMbIU4v.png" width="220" height="342">
+    <h2>HACKSAW RIDGE</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bvQ1wZvk0EI" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/3ZXWgQDqn1RZDKR3.png" width="220" height="342">
+    <h2>GAUGUIN: VOYAGE TO TAHITI</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Y9ni0CghN4s" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/QiC6zOmD3XefkeDB.png" width="220" height="342">
+    <h2>LOVING PABLO</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="pzD9zGcUNrw" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/a0i8waQ6Tjb4vHio.png" width="220" height="342">
+    <h2>NUN</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="tmeOjFno6Do" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/MVxdpxcdLZaC7Kd9.png" width="220" height="342">
+    <h2>AVENGERS: AGE OF ULTRON</h2>
+</div>
+
     </div>
   </body>
 </html>
-'''
-
-
-# A single movie entry html template
-movie_tile_content = '''
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="{trailer_youtube_id}" data-toggle="modal" data-target="#trailer">
-    <img src="{poster_image_url}" width="220" height="342">
-    <h2>{movie_title}</h2>
-</div>
-'''
-
-
-def create_movie_tiles_content(movies):
-    # The HTML content for this section of the page
-    content = ''
-    for movie in movies:
-        # Extract the youtube ID from the url
-        youtube_id_match = re.search(
-            r'(?<=v=)[^&#]+', movie.link_youtube)
-        youtube_id_match = youtube_id_match or re.search(
-            r'(?<=be/)[^&#]+', movie.link_youtube)
-        trailer_youtube_id = (youtube_id_match.group(0) if youtube_id_match
-                              else None)
-
-        # Append the tile for the movie with its content filled in
-        content += movie_tile_content.format(
-            movie_title=movie.titulo,
-            poster_image_url=movie.cartaz,
-            trailer_youtube_id=trailer_youtube_id
-        )
-    return content
-
-
-def open_movies_page(movies):
-    # Create or overwrite the output file
-    output_file = open('fresh_tomatoes.html', 'w')
-
-    # Replace the movie tiles placeholder generated content
-    rendered_content = main_page_content.format(
-        movie_tiles=create_movie_tiles_content(movies))
-
-    # Output the file
-    output_file.write(main_page_head + rendered_content)
-    output_file.close()
-
-    # open the output file in the browser (in a new tab, if possible)
-    url = os.path.abspath(output_file.name)
-    webbrowser.open('file://' + url, new=2)
