Finalização do projeto

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -106,62 +106,62 @@
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="uIxnTi4GmCo" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/xcqcq8qo3UVD2lTW.png" width="220" height="342">
-    <h2>ALPHA</h2>
+    <h2>Filme: ALPHA<br>Elenco: Morgan Freeman, Kodi Smit-McPhee, Leonor Varela, Natassia Malthe</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="eJU6S5KOsNI" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/qOlnIN88hLFAclPs.png" width="220" height="342">
-    <h2>MILE 22</h2>
+    <h2>Filme: MILE 22<br>Elenco: Lauren Cohan, Mark Wahlberg, Ronda Rousey, John Malkovich</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="HyNJ3UrGk_I" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/MdG91lNkW22NI6wf.png" width="220" height="342">
-    <h2>THE EQUALIZER 2</h2>
+    <h2>Filme: THE EQUALIZER 2<br>Elenco: Denzel Washington, Pedro Pascal, Bill Pullman, Melissa Leo</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bsLk0NPRFAc" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/t6heqJzTtW3amJQl.png" width="220" height="342">
-    <h2>THE MEG</h2>
+    <h2>Filme: THE MEG<br>Elenco: Jason Statham, Ruby Rose, Rainn Wilson, Robert Taylor</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="3u3cSuLJxVY" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/obrNkDTfPNmADpbq.png" width="220" height="342">
-    <h2>THE BOMBING</h2>
-</div>
-
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="gG22XNhtnoY" data-toggle="modal" data-target="#trailer">
-    <img src="https://yifyddl.com/uploads/pn5yfqF0Od3c8aZZ.png" width="220" height="342">
-    <h2>SCHINDLER'S LIST</h2>
+    <h2>Filme: THE BOMBING<br>Elenco: Bruce Willis, Adrien Brody, Rumer Willis, Bingbing Fan</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="BFwGqLa_oAo" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/G8qUNaoZJjRekaV7.png" width="220" height="342">
-    <h2>THE PIANIST</h2>
+    <h2>Filme: THE PIANIST<br>Elenco: Adrien Brody, Thomas Kretschmann, Emilia Fox, Ed Stoppard</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="s2-1hz1juBI" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/3LrFLi7YStMbIU4v.png" width="220" height="342">
-    <h2>HACKSAW RIDGE</h2>
+    <h2>Filme: HACKSAW RIDGE<br>Elenco: Teresa Palmer, Luke Bracey, Sam Worthington, Hugo Weaving</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bvQ1wZvk0EI" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/3ZXWgQDqn1RZDKR3.png" width="220" height="342">
-    <h2>GAUGUIN: VOYAGE TO TAHITI</h2>
+    <h2>Filme: GAUGUIN<br>Elenco: Vincent Cassel</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Y9ni0CghN4s" data-toggle="modal" data-target="#trailer">
-    <img src="https://yifyddl.com/uploads/QiC6zOmD3XefkeDB.png" width="220" height="342">
-    <h2>LOVING PABLO</h2>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="gG22XNhtnoY" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/pn5yfqF0Od3c8aZZ.png" width="220" height="342">
+    <h2>Filme: SCHINDLER'S LIST<br>Elenco: Ralph Fiennes, Liam Neeson, Embeth Davidtz, Ben Kingsley</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="pzD9zGcUNrw" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/a0i8waQ6Tjb4vHio.png" width="220" height="342">
-    <h2>NUN</h2>
+    <h2>Filme: NUN<br>Elenco: William McNamara</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="tmeOjFno6Do" data-toggle="modal" data-target="#trailer">
     <img src="https://yifyddl.com/uploads/MVxdpxcdLZaC7Kd9.png" width="220" height="342">
-    <h2>AVENGERS: AGE OF ULTRON</h2>
+    <h2>Filme: AVENGERS<br>Elenco: Scarlett Johansson, Chris Hemsworth, Chris Evans, Elizabeth Olsen</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Y9ni0CghN4s" data-toggle="modal" data-target="#trailer">
+    <img src="https://yifyddl.com/uploads/QiC6zOmD3XefkeDB.png" width="220" height="342">
+    <h2>Filme: LOVING PABLO<br>Elenco: Penelope Cruz, Javier Bardem, Peter Sarsgaard, Colin Salmon</h2>
 </div>
 
     </div>
